--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "node-fetch": "^3.2.10",
     "pexels": "^1.4.0"
   }
+
 }
