--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "cross-env NODE_ENV=local node app.js",
+    "build": "cross-env NODE_ENV=one SECOND_ENV=two node app.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "node-fetch": "^3.2.10",
     "pexels": "^1.4.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
-
 }
