--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "cross-env NODE_ENV=local node app.js",
-    "build": "cross-env NODE_ENV=one SECOND_ENV=two node app.js"
+    "prod": "cross-env NODE_ENV=prod node app.js"
   },
   "dependencies": {
     "dotenv": "^16.0.2",
