--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prod": "cross-env NODE_ENV=prod node app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "pexels": "^1.4.0"
